feat: product admin CRUD endpoints
