# swagger/swagger.json
@@ -165,6 +165,156 @@
                 }
             }
         },
+        "/admin/products/": {
+            "get": {
+                "tags": [
+                    "admin/products"
+                ],
+                "summary": "Get All Products",
+                "description": "get all products",
+                "operationId": "ProductAdminController.Get All Products",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "limit of this request",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "page",
+                        "description": "page of this request",
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "admin/products"
+                ],
+                "summary": "Create Product",
+                "description": "create product",
+                "operationId": "ProductAdminController.Create Product",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "params",
+                        "description": "body of this request",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Product"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/admin/products/{productID}": {
+            "get": {
+                "tags": [
+                    "admin/products"
+                ],
+                "summary": "Get Product",
+                "description": "Get product",
+                "operationId": "ProductAdminController.Get Product",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "productID",
+                        "description": "id of the product to update",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "admin/products"
+                ],
+                "summary": "Update Product",
+                "description": "update product",
+                "operationId": "ProductAdminController.Update Product",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "productID",
+                        "description": "id of the product to update",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "body",
+                        "name": "params",
+                        "description": "body of this request",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Product"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "admin/products"
+                ],
+                "summary": "Delete Product",
+                "description": "delete product",
+                "operationId": "ProductAdminController.Delete Product",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "productID",
+                        "description": "id of the product to update",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/public/categories/": {
             "get": {
                 "tags": [
@@ -543,6 +693,10 @@
         },
         {
             "name": "admin/categories",
+            "description": "Operations about object\n"
+        },
+        {
+            "name": "admin/products",
             "description": "Operations about object\n"
         }
     ]
